--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 0.1.0
 Author: Paolo Martini
 Maintainer: Paolo Martini <paolo.cavei@gmail.com>
 Description: Ensemble of different finctions that are meant to be used for clip legacy R packages.
-Imports: ggplot2, corpcor, elasticnet, FactoMineR, qpgraph, graphite, checkmate, RColorBrewer, SuperExactTest, igraph
+Imports: ggplot2, corpcor, elasticnet, FactoMineR, qpgraph, graphite, checkmate, RColorBrewer, SuperExactTest, igraph, AnnotationDbi
 Depends: 
+Suggests: org.Hs.eg.db
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
