Clique and Graph Functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convertIds)
 export(createSignificanceMask)
 export(estimateCov)
 export(estimateExprCov)
+export(extractCliquesFromDag)
 export(getPathFathers)
 export(id2name)
 export(mapFromDict)
@@ -15,12 +16,14 @@ export(mergeGraphitePathways)
 export(minOrNA)
 export(plotSupertest)
 export(plotSupertestFrequencies)
+export(removeSelfLoops)
 export(reverseDict)
 export(runSupertest)
 export(sparseCompPCs)
 export(subPathway)
 export(summarizeOmicsResByMinPvalue)
 export(topoCompPCs)
+importClassesFrom(graph,graphNEL)
 importFrom(AnnotationDbi,select)
 importFrom(FactoMineR,estim_ncp)
 importFrom(RColorBrewer,brewer.pal)
@@ -29,6 +32,13 @@ importFrom(SuperExactTest,supertest)
 importFrom(checkmate,assertClass)
 importFrom(corpcor,cov.shrink)
 importFrom(elasticnet,spca)
+importFrom(gRbase,coerceGraph)
+importFrom(gRbase,graphNEL2M)
+importFrom(gRbase,is.DAG)
+importFrom(gRbase,moralize)
+importFrom(gRbase,moralizeMAT)
+importFrom(gRbase,rip)
+importFrom(gRbase,triangulate)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,element_text)
@@ -47,6 +57,7 @@ importFrom(igraph,as_ids)
 importFrom(igraph,distances)
 importFrom(igraph,ego)
 importFrom(igraph,make_ego_graph)
+importFrom(methods,as)
 importFrom(qpgraph,qpIPF)
 importFrom(stats,cov)
 importFrom(stats,reorder)
