--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Paolo Martini
 Maintainer: Paolo Martini <paolo.cavei@gmail.com>
 Description: Ensemble of different functions that are meant to be used for clip legacy R packages.
-Imports: ggplot2, corpcor, elasticnet, FactoMineR, qpgraph, graphite, checkmate, RColorBrewer, SuperExactTest, igraph, AnnotationDbi
+Imports: ggplot2, corpcor, elasticnet, FactoMineR, qpgraph, graphite, checkmate, RColorBrewer, SuperExactTest, igraph, AnnotationDbi, gRbase, graph, methods
 Depends: 
 Suggests: org.Hs.eg.db
 License: AGPL-3
