Simulated survival dataset functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,18 @@
 
 export(compPCs)
 export(computePCs)
+export(computeSimPATHyParameters)
 export(computeSupertestFrequencies)
 export(convertIds)
+export(createPath)
 export(createSignificanceMask)
 export(estimateCov)
 export(estimateExprCov)
 export(extractCliquesFromDag)
+export(fromChain2edgeList)
 export(getPathFathers)
 export(id2name)
+export(makeTheDataset)
 export(mapFromDict)
 export(mapPathwaysIDfromGraphite)
 export(mergeGraphitePathways)
@@ -19,6 +23,7 @@ export(plotSupertestFrequencies)
 export(removeSelfLoops)
 export(reverseDict)
 export(runSupertest)
+export(simulateData)
 export(sparseCompPCs)
 export(subPathway)
 export(summarizeOmicsResByMinPvalue)
@@ -51,8 +56,10 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,plot)
+importFrom(graphite,pathwayGraph)
 importFrom(igraph,"V<-")
 importFrom(igraph,V)
+importFrom(igraph,all_shortest_paths)
 importFrom(igraph,as_ids)
 importFrom(igraph,distances)
 importFrom(igraph,ego)
@@ -61,3 +68,4 @@ importFrom(methods,as)
 importFrom(qpgraph,qpIPF)
 importFrom(stats,cov)
 importFrom(stats,reorder)
+importFrom(survsim,simple.surv.sim)
