--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,16 +10,19 @@ export(createSignificanceMask)
 export(estimateCov)
 export(estimateExprCov)
 export(extractCliquesFromDag)
+export(filterDirected)
 export(fromChain2edgeList)
 export(getPathFathers)
 export(id2name)
 export(makeTheDataset)
+export(makeUniformDataset)
 export(mapFromDict)
 export(mapPathwaysIDfromGraphite)
 export(mergeGraphitePathways)
 export(minOrNA)
 export(plotSupertest)
 export(plotSupertestFrequencies)
+export(randomExpression)
 export(removeSelfLoops)
 export(reverseDict)
 export(runSupertest)
@@ -55,7 +58,10 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(grDevices,colorRampPalette)
+importFrom(graph,nodes)
 importFrom(graphics,plot)
+importFrom(graphite,buildPathway)
+importFrom(graphite,edges)
 importFrom(graphite,pathwayGraph)
 importFrom(igraph,"V<-")
 importFrom(igraph,V)
@@ -63,9 +69,14 @@ importFrom(igraph,all_shortest_paths)
 importFrom(igraph,as_ids)
 importFrom(igraph,distances)
 importFrom(igraph,ego)
+importFrom(igraph,graph.data.frame)
 importFrom(igraph,make_ego_graph)
 importFrom(methods,as)
+importFrom(mvtnorm,rmvnorm)
 importFrom(qpgraph,qpIPF)
+importFrom(simPATHy,simPATHy)
 importFrom(stats,cov)
 importFrom(stats,reorder)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(survsim,simple.surv.sim)
