--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(filterDirected)
 export(fromChain2edgeList)
 export(getPathFathers)
 export(id2name)
+export(makeDegreesEven)
+export(makePositiveDefinite)
 export(makeTheDataset)
 export(makeUniformDataset)
 export(mapFromDict)
@@ -59,6 +61,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(grDevices,colorRampPalette)
 importFrom(graph,nodes)
+importFrom(graph,randomNodeGraph)
 importFrom(graphics,plot)
 importFrom(graphite,buildPathway)
 importFrom(graphite,edges)
