Adjustment to be compliant with omicNames MOSClip branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(averageReplicateMatrices)
 export(compPCs)
 export(compPCsWithResampling)
+export(computeFreqs)
 export(computePCs)
 export(computePCsWithResampling)
 export(computeSimPATHyParameters)
@@ -26,12 +27,12 @@ export(mapFromDict)
 export(mapPathwaysIDfromGraphite)
 export(mergeGraphitePathways)
 export(minOrNA)
-export(plotSupertest)
+export(plotSuperTest)
 export(plotSupertestFrequencies)
 export(randomExpression)
 export(removeSelfLoops)
 export(reverseDict)
-export(runSupertest)
+export(runSuperTest)
 export(simulateData)
 export(sparseCompPCs)
 export(sparseCompPCsWithResampling)
