--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(gRbase,rip)
 importFrom(gRbase,triangulate)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_polar)
+importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
