New legend position

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_polygon)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplot_build)
+importFrom(ggplot2,ggplot_gtable)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
@@ -74,6 +76,8 @@ importFrom(graphics,plot)
 importFrom(graphite,buildPathway)
 importFrom(graphite,edges)
 importFrom(graphite,pathwayGraph)
+importFrom(grid,grid.draw)
+importFrom(grid,grid.newpage)
 importFrom(igraph,"V<-")
 importFrom(igraph,V)
 importFrom(igraph,all_shortest_paths)
