Minor look adjustments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(computeFreqs)
 export(computePCs)
 export(computePCsWithResampling)
 export(computeSimPATHyParameters)
-export(computeSupertestFrequencies)
 export(convertIds)
 export(createPath)
 export(createSignificanceMask)
@@ -27,12 +26,10 @@ export(mapFromDict)
 export(mapPathwaysIDfromGraphite)
 export(mergeGraphitePathways)
 export(minOrNA)
-export(plotSuperTest)
-export(plotSupertestFrequencies)
+export(plotFrequencies)
 export(randomExpression)
 export(removeSelfLoops)
 export(reverseDict)
-export(runSuperTest)
 export(simulateData)
 export(sparseCompPCs)
 export(sparseCompPCsWithResampling)
@@ -43,9 +40,6 @@ export(topoCompPCsWithResampling)
 importClassesFrom(graph,graphNEL)
 importFrom(AnnotationDbi,select)
 importFrom(FactoMineR,estim_ncp)
-importFrom(RColorBrewer,brewer.pal)
-importFrom(SuperExactTest,plot.msets)
-importFrom(SuperExactTest,supertest)
 importFrom(checkmate,assertClass)
 importFrom(corpcor,cov.shrink)
 importFrom(elasticnet,spca)
@@ -67,12 +61,11 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggplot_gtable)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,rel)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
-importFrom(grDevices,colorRampPalette)
 importFrom(graph,nodes)
 importFrom(graph,randomNodeGraph)
-importFrom(graphics,plot)
 importFrom(graphite,buildPathway)
 importFrom(graphite,edges)
 importFrom(graphite,pathwayGraph)
