--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(gRbase,triangulate)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
