Broad restiling of the package from MOSClip cnv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,13 +20,18 @@ export(getPathFathers)
 export(id2name)
 export(makeDegreesEven)
 export(makePositiveDefinite)
-export(makeTheDataset)
-export(makeUniformDataset)
+export(makeTheExpressionDataset)
+export(makeTheMethylationDataset)
+export(makeTheMutationDataset)
+export(makeUniformExpressionDataset)
+export(makeUniformMethylationDataset)
+export(makeUniformMutationsDataset)
 export(mapFromDict)
 export(mapPathwaysIDfromGraphite)
 export(mergeGraphitePathways)
 export(minOrNA)
 export(plotFrequencies)
+export(plotPathInGraphNEL)
 export(randomExpression)
 export(removeSelfLoops)
 export(reverseDict)
@@ -40,6 +45,7 @@ export(topoCompPCsWithResampling)
 importClassesFrom(graph,graphNEL)
 importFrom(AnnotationDbi,select)
 importFrom(FactoMineR,estim_ncp)
+importFrom(checkmate,assert)
 importFrom(checkmate,assertClass)
 importFrom(corpcor,cov.shrink)
 importFrom(elasticnet,spca)
@@ -67,6 +73,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(graph,nodes)
 importFrom(graph,randomNodeGraph)
+importFrom(graphics,plot)
 importFrom(graphite,buildPathway)
 importFrom(graphite,edges)
 importFrom(graphite,pathwayGraph)
@@ -85,6 +92,7 @@ importFrom(mvtnorm,rmvnorm)
 importFrom(qpgraph,qpIPF)
 importFrom(simPATHy,simPATHy)
 importFrom(stats,cov)
+importFrom(stats,rbinom)
 importFrom(stats,reorder)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
