--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,4 +97,5 @@ importFrom(stats,reorder)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(survsim,simple.surv.sim)
+importFrom(utils,data)
 importFrom(utils,read.table)
